# relay

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  INSTALL.md  README.md  conanfile.txt  map.txt  results.md
assets/: map.txt  messages.txt
include/benchmark/: benchmark.hpp
include/core/: cli_manager.hpp  message.hpp  node.hpp  peer_connection.hpp  peer_manager.hpp  router.hpp
include/relay/: relay.hpp
include/ui/: cli_manager.hpp  start_test.hpp
scripts/: benchmark.sh
scripts/benchmark-dashboard/: bench.html
src/: main.cpp  relay.cpp
src/benchmark/: benchmark.cpp
src/core/: cli_manager.cpp  node.cpp  peer_connection.cpp  peer_manager.cpp  router.cpp
src/ui/: cli_manager.cpp  start_test.cpp
